[package]
name = "rust-rive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bytemuck = "1.15.0"
env_logger = "0.11.3"
flume = "0.11.0"
futures-intrusive = "0.5.0"
gif = "0.13.1"
image = "0.25.1"
log = "0.4.21"
png = "0.17.13"
pollster = "0.3.0"
vello = "0.1.0"
wgpu = "0.19.4"
